# leads-classifier

./: ExerciseTuesday6th.ipynb  LeadsProject.ipynb  README.md  ResamplingAssignment.ipynb  pyproject.toml
