[tool.poetry]
name = "leads"
version = "0.1.0"
description = ""
authors = ["Paul Cowie <paul.cowie@ntlworld.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.23.2"
sklearn = "^0.0"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
pandas = "^1.0.5"
jupyterlab = "^3.4.5"
pandas-profiling = "^3.2.0"
ipywidgets = "^8.0.1"
jupyter = "^1.0.0"
auto-sklearn = "^0.14.7"
distributed = "^2022.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
